--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "lweaxodb",
-  "version": "0.0.4",
+  "version": "0.0.6",
   "description": "İşinize Yarıcak Database Modülü",
   "main": "./file/index.js",
   "scripts": {
@@ -23,9 +23,9 @@
   },
   "homepage": "https://github.com/LWEAXO/lweaxodb#readme",
   "dependencies": {
-    "fs": "^0.0.1-security",
-    "path": "^0.12.7",
-    "body-parser": "^1.20.2",
-    "express": "^4.19.2"
-  }
+    "axios": "^1.7.4",
+    "tslib": "^2.6.3",
+    "path": "^0.12.5"
+  },
+  "deprecated": false
 }
